plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jreinhal'
version = '2.2.0'

// Edition selection via -Pedition=xxx (default: government)
def edition = project.hasProperty('edition') ? project.property('edition') : 'government'
ext.edition = edition

// Log the edition being built
println ">>> Building SENTINEL edition: ${edition} <<<"

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Spring AI for Ollama (Local)
    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter:1.0.0-M4'
    
    // Spring AI for Cloud Models (Foundation)
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M4'
    implementation 'org.springframework.ai:spring-ai-anthropic-spring-boot-starter:1.0.0-M4'
    implementation 'org.springframework.ai:spring-ai-vertex-ai-gemini-spring-boot-starter:1.0.0-M4'

    implementation 'org.springframework.ai:spring-ai-mongodb-atlas-store-spring-boot-starter:1.0.0-M4'
    implementation 'org.springframework.ai:spring-ai-pdf-document-reader:1.0.0-M4'

    // Apache Tika for file type detection
    implementation 'org.apache.tika:tika-core:2.9.1'
    implementation 'org.apache.tika:tika-parsers-standard-package:2.9.1'

    // Caffeine cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Rate limiting
    implementation 'com.bucket4j:bucket4j-core:8.7.0'

    // OpenAPI/Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // JWT validation for OIDC
    implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.ai:spring-ai-bom:1.0.0-M4'
    }
}

// Edition-specific source sets with actual exclusion logic
sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']

            // Apply exclusions based on edition
            if (!(edition in ['trial', 'professional', 'medical', 'government'])) {
                // Unknown edition - exclude all premium packages
                exclude '**/professional/**'
                exclude '**/medical/**'
                exclude '**/government/**'
            } else if (edition == 'trial') {
                // Trial: Include professional, exclude medical and government
                exclude '**/medical/**'
                exclude '**/government/**'
            } else if (edition == 'professional') {
                // Professional: Include professional, exclude medical and government
                exclude '**/medical/**'
                exclude '**/government/**'
            } else if (edition == 'medical') {
                // Medical: Include professional and medical, exclude government
                exclude '**/government/**'
            }
            // Government edition includes all packages (no exclusions)
        }
    }
}

tasks.named('bootRun') {
    jvmArgs = ['--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED']
}

def docsIndexSource = file('docs/README.md')
def docsIndexTarget = file('src/main/resources/static/docs-index.md')

tasks.register('syncDocsIndex') {
    description = 'Sync docs/README.md into static docs-index.md for the UI.'
    inputs.file(docsIndexSource)
    outputs.file(docsIndexTarget)
    doLast {
        if (!docsIndexSource.exists()) {
            throw new GradleException("Missing ${docsIndexSource}")
        }
        docsIndexTarget.parentFile.mkdirs()
        docsIndexTarget.text = docsIndexSource.text
    }
}

processResources {
    dependsOn tasks.named('syncDocsIndex')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Edition-aware JAR naming
bootJar {
    archiveBaseName = "sentinel-${edition}"
    archiveVersion = version
}

test {
    useJUnitPlatform()
}
